style: fix contrasting color

--- a/site/src/themes/variables.scss
+++ b/site/src/themes/variables.scss
@@ -7,9 +7,9 @@
   --color-primary-tint: #4c8dff;
 
   --color-secondary: #3dc2ff;
-  --color-secondary-rgb: 61, 194, 255;
-  --color-secondary-contrast: #ffffff;
-  --color-secondary-contrast-rgb: 255, 255, 255;
+  --color-secondary-rgb: 61,194,255;
+  --color-secondary-contrast: #000000;
+  --color-secondary-contrast-rgb: 0,0,0;
   --color-secondary-shade: #36abe0;
   --color-secondary-tint: #50c8ff;
 
